# MlopsPractice

1/: 01_dockerized_package_student.ipynb  Dockerfile  dvc.yaml  requirements.txt
1/data/processed/: airbnb_neighbourhood_summary.csv
1/data/raw/: listings_sample.csv
1/reports/: hw01_a_run_report.md
1/src/airbnb_ops/: cli.py  config.py  extract.py  validate.py
1/src/airbnb_ops.egg-info/: SOURCES.txt  requires.txt
2/reports/: baseline_explain_analyze.txt  hw01_b_sql_performance.md
2/sql/: 02_create_materialized_view.sql
3/: 03_airflow_pipeline_student.ipynb
3/dags/: qbc12_hw01_8727_airbnb_pipeline.py
3/reports/: hw01_c_airflow.md
W1/1/: .dockerignore  docker-compose.yml  pyproject.toml
W1/1/src/airbnb_ops/: pii.py  transform.py
W1/1/src/airbnb_ops.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
W1/2/: 02_sql_performance_metabase_student.ipynb
W1/2/reports/: explain_notes.md
W1/2/sql/: 01_baseline_neighbourhood_summary.sql
W2/: .gitignore  01_etl_pipeline_student.ipynb  02_mlflow_experiments_student.ipynb
W2/data/features/: listing_availability_features_v1_audit_cleaned.csv  listing_availability_features_v1_audit_cleaned.parquet  listing_availability_features_v1_audit_cleaned_validation_report.json  (+1 more)
W2/student_hw03_fastapi_serving/: .env.example  README.md  requirements.txt  run_local.cmd
W3/: .dockerignore  .env.example  .gitignore  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  docker-compose.yml  pyproject.toml  requirements.txt
W3/k8s/: deployment.yaml  service.yaml
W3/reports/: docker_size_report.md
(+95 files in other folders)
