[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-ops"
version = "0.1.0"
description = "A data pipeline for Airbnb neighbourhood operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
airbnb-ops = "airbnb_ops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
